<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Add new product"
        android:background="@color/brown"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Product Name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/popName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Quantity"/>

    <EditText
        android:id="@+id/popQuantity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Stocks"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/popStocks"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/UTD"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/popUtd"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@color/brown"
        android:textColor="@color/white"
        android:text="Save"
        android:textSize="21sp"
        android:gravity="center"
        android:id="@+id/btnSave"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/brown"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:backgroundTint="@color/yellow"
        android:text="Back"
        android:textSize="21sp"
        android:gravity="center"
        android:id="@+id/btnBack"/>



</LinearLayout>